# DeepVault

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  dev.ps1  fast_reseed.py  final_rehab_seed.py  heartbeat_test.py  implementation_plan.md  main.py  pulse_test.py  pulse_test_ascii.py  pyproject.toml  pytest_out.txt  pytest_out2.txt  setup_structure.py  test_0.py  test_1.py  test_2.py  test_3.py  verify_output.txt  verify_output_utf8.txt
.github/workflows/: ci.yml
app/: config.py  dependencies.py  main.py
app/api/: dependencies.py
app/core/: exceptions.py
app/services/: cache_service.py  document.py  ingestion.py  query.py
app/ui/: dashboard.py
data/: downloaded_ids.txt
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  chunking_strategies.md
docs/adrs/: 001-vector-db-choice.md  002-llm-provider.md  003-sqlite-for-metadata.md  004-interface-driven-design.md  005-redis-caching-strategy.md
scratch/: auth_diagnostic.py  final_victory_check.py  test_eval_pipeline.py
scripts/: benchmark_cache.py  diagnostic_chunk_quality.py  eval_engine_metrics.py  generate_paper_qa.py  seed_all.py  seed_data.py
synthetic_data_v2/: golden_qa_dataset.json  manifest.json
synthetic_data_v2/api_documentation/: project_aurora_1.md  project_aurora_2.md  project_aurora_3.md  project_aurora_9.md  project_chimera_13.md  project_chimera_15.md  project_chimera_4.md  project_deepvault_10.md  project_deepvault_6.md  project_nexus_12.md  project_nexus_5.md  project_sentinel_11.md  project_sentinel_14.md  project_sentinel_7.md  project_sentinel_8.md
synthetic_data_v2/incident_reports/: project_atlas_9.md  project_aurora_3.md  (+13 more)
tests/: conftest.py  test_embeddings_health.py  verify_chunkers.py  verify_logging.py  verify_services.py
troubleshooting/: observability_guide.md  production_crash_audit.md
(+136 files in other folders)
